# diarization

./: .gitignore  LICENSE  Logging_config.py  README.md  Transcription_uZ05epTJKC3E_g.txt  audio_processing.py  clustering.py  constants.py  downloaded.json  file_manager.py  main.py  manage_output.py  sample_path  sampling.py  settings.py  settings.yaml  setttings.py  testing.py  tests.py  transcribe.py  transcription.docx  vectorize.py  video.py  yandex.py  Расшифровка итоговая от 2025-01-30 01-11-38  Расшифровка итоговая от 2025-01-30 01-57-08  Расшифровка итоговая от 2025-01-30 02-01-02  Расшифровка итоговая от 2025-01-30 02-05-00  Расшифровка итоговая от 2025-01-30 02-08-41
zakaz_audio/: pyproject.toml
