[tool.poetry]
name = "zakaz-audio"
version = "0.1.0"
description = ""
authors = ["Ali Isayev <ali.isayev008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "0.23.2"
hdbscan = "^0.8.40"
soundfile = "^0.12.1"
llvmlite = "^0.43.0"
numba = "^0.60.0"
pyannote-audio = "^3.3.2"
openai-whisper = "^20240930"
speechbrain = "^1.0.2"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
