[tool.poetry]
name = "zakaz-audio"
version = "0.1.0"
description = ""
authors = ["Ali Isayev <ali.isayev008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hdbscan = "^0.8.40"
soundfile = "^0.12.1"
llvmlite = "^0.43.0"
numba = "^0.60.0"
pyannote-audio = "^3.3.2"
openai-whisper = "^20240930"
speechbrain = "^1.0.2"
python-docx = "^1.1.2"
yadisk = {extras = ["sync-defaults"], version = "^3.1.0"}
gdown = "^5.2.0"
onnxruntime = "^1.20.1"
nemo-toolkit = {extras = ["nemo"], version = "^2.1.0"}
huggingface-hub = "^0.27.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
torch = "^2.5.1+cu118"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
